# MemoryPilot

./: .env.example  README.md  docker-compose.yml
.githooks/: pre-commit
backend/: .env.example  .gitignore  Dockerfile  main.py  pyproject.toml  requirements-test.txt  requirements.txt
backend/my_agent/: agent.py  config.py
backend/my_agent/database/: base.py  vector.py
backend/my_agent/services/: document.py
backend/my_agent/utils/: misc.py  tools.py  types.py
backend/src/: config.py
backend/src/agent/: chat.py  tools.py  types.py
backend/src/database/: base.py  vectordb.py
backend/src/model/: embedding.py  llm.py
backend/src/services/: document.py
backend/src/utils/: logger.py  misc.py
backend/tests/: conftest.py  test_evaluation.py
frontend/: Dockerfile  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: chat.ts  http.ts
frontend/src/components/background/: StarryNight.vue
frontend/src/components/button/: BoxButton.vue  FillUploadBoxButton.vue  PosBoxButton.vue  UploadButton.vue
frontend/src/components/chat/: ChatHeader.vue  ChatInput.vue  ChatMessage.vue  ChatMessageList.vue  ChatRoom.vue  Sidebar.vue  SidebarHeader.vue  SidebarItem.vue
frontend/src/components/misc/: Avatar.vue  DropZone.vue
frontend/src/components/modal/: FileUploadModal.vue
frontend/src/composables/: useAutoScroll.ts
frontend/src/config/: api.ts
frontend/src/db/: fileDb.ts
frontend/src/services/: blockService.ts  messageService.ts
frontend/src/stores/: conversationStore.ts
frontend/src/styles/: all.css
frontend/src/types/: index.ts
frontend/src/utils/background/: universe.ts
frontend/src/utils/misc/: file.ts
frontend/src/views/: ChatroomView.vue
