[project]
name = "memorypilot-backend"
version = "0.1.0"
description = "..."
requires-python = ">=3.12.12"
dependencies = [
    "fastapi>=0.122.0",
    "langchain>=1.1.0",
    "langchain-google-genai>=4.1.2",
    "langchain-postgres>=0.0.16",
    "langchain-text-splitters>=1.1.0",
    "pydantic-settings>=2.12.0",
    "pypdf>=6.4.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
]

[dependency-groups]
test = ["deepeval>=3.7.6", "pytest-asyncio>=1.3.0"]

[tool.uv]
default-groups = []

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v -s --strict-markers --disable-warnings"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

markers = [
    "unit: 純邏輯單元測試 (Mock 外部依賴)",
    "integration: 整合測試 (連接真實 DB/Docker)",
    "deepeval: 使用 LLM 進行評估的測試 (耗時且有成本)"
]

log_cli = true
log_cli_level = "INFO"
log_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
