[project]
name = "memorypilot-backend"
version = "1.1.0"
description = "..."
requires-python = ">=3.12.12"
dependencies = [
    "fastapi>=0.122.0",
    "langchain>=1.1.0",
    "langchain-google-genai>=4.1.2",
    "langchain-postgres>=0.0.16",
    "langchain-text-splitters>=1.1.0",
    "pydantic-settings>=2.12.0",
    "pypdf>=6.4.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
]

[tool.uv]
default-groups = []

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
